syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 广告分组
message SAdGroup {
  int64 Id = 1;
  string Name = 2;
  // 标志
  int32 Flag = 3;
  // 是否开放给外部
  bool Opened = 4;
  bool Enabled = 5;
}

// 广告位编号
message AdPositionId {
  int64 PositionId = 1;
}

message AdGroupListResponse {
  repeated SAdGroup Value = 1;
}

message AdGroupResponse{
  repeated string Value = 1;
}

message SAdPosition{
  /** 编号 */
  int64 Id = 1;
  /** GroupId */
  int64 GroupId = 2;
  /** 广告位编码 */
  string Key = 3;
  /** 广告位名称 */
  string Name = 4;
  /** 投放的广告编号 */
  int64 PutAid = 5;
  /** Opened */
  int32 Opened = 6;
  /** Enabled */
  int32 Enabled = 7;
  /** 标志 */
  int32 Flag = 8;
  /** 分组名称 */
  string GroupName = 9;
}

// 查询广告请求
message QueryAdRequest{
  string Keyword = 1;
  int32 Size = 2;
}

// 查询广告响应
message QueryAdResponse{
  repeated SAd Value = 1;
}

// 广告用户设置
message SAdUserSet {
  // 编号
  int64 Id = 1;
  // 广告位编号
  int64 PosId = 2;
  //广告用户编号
  int64 AdUserId = 3;
  // 广告编号
  int64 AdId = 4;
}

// 广告
message SAd {
  // 编号
  int64 Id = 1;
  //广告用户编号
  int64 UserId = 2;
  // 名称
  string Name = 3;
  // 广告类型
  int32 AdType = 4;
  // 展现次数
  int32 ShowTimes = 5;
  // 点击次数
  int32 ClickTimes = 6;
  // 展现天数
  int32 ShowDays = 7;
  // 修改时间
  int64 UpdateTime = 8;
}

// 广告数据传输对象
message SAdvertisementDto {
  // 广告编号
  int64 Id = 1;
  // 广告类型
  int32 AdType = 2;
  // 文本广告数据
  STextAdData Text = 3;
  // 图片广告数据
  SImageAdData Image = 4;
  // 轮播广告数据
  SSwiperAdData Swiper = 5;
}

// 文本广告数据
message STextAdData {
  int64 Id = 1;
  string Title = 2;
  string LinkURL = 3;
}

// 图片广告数据
message SImageAdData {
  // 图片编号
  int64 Id = 1;
  // 图片标题
  string Title = 2;
  // 链接
  string LinkURL = 3;
  // 图片地址
  string ImageURL = 4;
  // 是否启用
  bool Enabled = 5;
  // 排列序号
  int32 SortNum = 6;
}

// 轮播广告数据
message SSwiperAdData{
  repeated SImageAdData Images = 1;
}

message SetDefaultAdRequest {
  int64 GroupId = 1;
  int64 PosId = 2;
  int64 AdId = 3;
}
message SetUserAdRequest {
  int64 AdUserId = 1;
  int64 PosId = 2;
  int64 AdId = 3;
}
message AdIdRequest {
  int64 AdUserId = 1;
  int64 AdId = 2;
  string AdKey = 3;
}

message AdKeyRequest {
  int64 AdUserId = 1;
  string AdPosKey = 2;
}

message SaveAdRequest {
  int64 AdUserId = 1;
  SAd Value = 2;
}

message SaveLinkAdRequest {
  int64 AdUserId = 1;
  int64 AdId = 2;
  STextAdData Value = 3;
}

message SaveImageAdRequest {
  int64 AdUserId = 1;
  int64 AdId = 2;
  SImageAdData Value = 3;
}

message ImageAdIdRequest {
  int64 AdUserId = 1;
  int64 AdId = 2;
  int64 ImageId = 3;
}



